[Bugfix] Names in the note panel go offscreen (#2092)
* fix

* fix

--- a/src/components/NoteContent/NoteContent.scss
+++ b/src/components/NoteContent/NoteContent.scss
@@ -27,6 +27,7 @@
   .author-and-time {
     display: flex;
     flex-direction: column;
+    word-break: break-word;
   }
 
   .author-and-date {
