--- a/src/components/NotesPanel/NotesPanel.scss
+++ b/src/components/NotesPanel/NotesPanel.scss
@@ -207,6 +207,7 @@
   .note-wrapper:first-child {
     .ListSeparator {
       margin-top: 0px;
+      word-break: break-word;
     }
   }
 
